# gibtax

./: .gitignore  Cargo.toml  README.md
src/: asset_events.rs  cash.rs  date.rs  dividends.rs  error.rs  fifo.rs  fx.rs  main.rs  parser.rs  quellensteuer.rs  read.rs  read_transactions.rs  report.rs  settings.rs  veraeusserung.rs  wechselkurs.rs
