[package]
name = "gibtax"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
chrono = "0.4.45"
clap = { version = "4.6.1", features = [ "derive" ] }
csv = "1.4.0"
regex = "1.12.4"
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.150"
thiserror = "2.0.18"
