[package]
name = "gibtax"
description = "Extract data from interactive brokers reports to prepare German tax forms"
version = "0.1.0"
edition = "2024"
authors = [ "Mark Beinker <mwb@quantlink.de>" ]
license = "MIT OR Apache-2.0"
repository = "git@github.com:xemwebe/gibtax"
readme = "README.md"
keywords = ["finance", "tax"]

[dependencies]
anyhow = "1.0.103"
chrono = "0.4.45"
clap = { version = "4.6.1", features = [ "derive" ] }
config = "0.15.25"
csv = "1.4.0"
regex = "1.12.4"
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.150"
thiserror = "2.0.18"
